--- a/style.css
+++ b/style.css
@@ -79,22 +79,6 @@ width: 500px;
 border-collapse: collapse;
 }
 
-table.apple, td.coltest, th.thtest { 
-border: 4px solid blue;
-font-family: Arial, serif;
-text-align: left;
-color: blue;
-position: relative;
-left: 20px;
-border-collapse: collapse;
-height: 50px;
-width: 500px;
-
-}
-
-tbody {
-border: 4px solid black;
-}
 
 table.index {
 position: relative;
@@ -138,6 +122,21 @@ background-color: lightblue;
 text-align: center;
 }
 
-td {
 
+
+table.table1, th.th1, td.th2 {
+border: 2px solid black;
+border-collapse: collapse;
+left: 20px;
+position: relative;
+text-align: center;
+}
+
+.objective {
+border: 2px solid black;
+}
+
+tr.tr1 {
+border: 2px solid black;
+border-collapse: collapse;
 }
