--- a/style.css
+++ b/style.css
@@ -123,20 +123,17 @@ text-align: center;
 }
 
 
-
-table.table1, th.th1, td.th2 {
+.table1, th.th1, td.td1 {
 border: 2px solid black;
 border-collapse: collapse;
 left: 20px;
-position: relative;
 text-align: center;
 }
 
-.objective {
-border: 2px solid black;
+th.th1 {
+color: blue;
+text-decoration: underline;
 }
 
-tr.tr1 {
-border: 2px solid black;
-border-collapse: collapse;
-}
+
+
